--- a/grad_style.css
+++ b/grad_style.css
@@ -4,7 +4,6 @@
   padding: 0;
 }
 
-
 .nav {
   width: 20%;
   height: 100vh;
@@ -59,4 +58,8 @@
 #deep-ocean:hover {
   color: hsl(234 21% 66% / 1);
   background-image: linear-gradient(blue, black);
+}
+
+#india:hover {
+    background-image:linear-gradient(hsl(39 100% 46% / 1), hsl(39 100% 46% / 1) 5%, rgba(255, 255, 255, 0.477) 40%,rgba(255, 255, 255, 0.477) 60%, green);
 }
