--- a/grad_style.css
+++ b/grad_style.css
@@ -37,6 +37,7 @@
 .link {
   text-decoration: none;
   color: black;
+  letter-spacing: 3px;
 }
 
 .grad-frame {
@@ -62,4 +63,10 @@
 
 #india:hover {
     background-image:linear-gradient(hsl(39 100% 46% / 1), hsl(39 100% 46% / 1) 5%, rgba(255, 255, 255, 0.477) 40%,rgba(255, 255, 255, 0.477) 60%, green);
+}
+
+#dotted:hover {
+  background-image: radial-gradient(circle at center, blue 20%, white 30%, white);
+  background-repeat: repeat;
+  background-size: 20px 20px;
 }
